fix text overflow

--- a/src/app.styl
+++ b/src/app.styl
@@ -109,7 +109,7 @@
           padding: 1em
           font-size: 95%
           .md *
-            overflow-x: scroll
+            overflow-x: auto
 
       .pagination
         text-align: center
